test/src/e2e_vm_tests/test_programs/should_pass/language/aliased_imports/src/foo.sw
library;

use ::bar::Bar as Baz; // This is reexported at Baz

pub struct Foo {
    pub foo: u64,
}
