test/src/e2e_vm_tests/test_programs/should_fail/aliased_imports/src/foo.sw
library;

use ::bar::Bar as Baz;
